backend/deliveries/deployment/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: worksphere-ingress
  namespace: worksphere-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: worksphere.enterprise.com
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: worksphere-gateway
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: worksphere-frontend
                port:
                  number: 80
